update EMT (remove replaced mods)
- removed ITLT, forced resourcepacks, pack updater
- window icon should be more consistently used now
- window title doesnt work post main menu

--- a/config/endermodpacktweaks/features.cfg
+++ b/config/endermodpacktweaks/features.cfg
@@ -23,6 +23,71 @@ boss_proof_blocks {
     # [Ender Dragon] ore:proofEnderDragon
     # [Wither] ore:proofWither
     B:"[01] Enable Boss Proof Blocks"=false
+
+    # These blocks will be unable to be broken by the wither.
+    S:"[02] Default Wither" <
+        minecraft:bedrock
+        minecraft:end_portal
+        minecraft:end_portal_frame
+        minecraft:command_block
+        minecraft:repeating_command_block
+        minecraft:chain_command_block
+        minecraft:barrier
+        minecraft:structure_block
+        minecraft:structure_void
+        minecraft:piston_extension
+        minecraft:end_gateway
+     >
+
+    # These blocks will be unable to be broken by the ender dragon.
+    S:"[03] Default Ender Dragon" <
+        minecraft:bedrock
+        minecraft:end_portal
+        minecraft:end_portal_frame
+        minecraft:command_block
+        minecraft:repeating_command_block
+        minecraft:chain_command_block
+        minecraft:barrier
+        minecraft:obsidian
+        minecraft:end_stone
+        minecraft:iron_bars
+        minecraft:end_gateway
+     >
+}
+
+
+##########################################################################################################
+# forced_resourcepack
+#--------------------------------------------------------------------------------------------------------#
+# Autoload a selection of resourcepacks.
+##########################################################################################################
+
+forced_resourcepack {
+    # Load Resourcepacks by default.
+    B:"[01] Enable Forced Resourcepacks"=true
+
+    # Should Resourcepacks that aren't on the list be removed?
+    B:"[02] Remove unlisted"=false
+
+    # Resourcepacks will be loaded from first to last.
+    S:"[03] Default Resource Packs" <
+        NewDefault+v1.41[MC1.9-1.12.2].zip
+        Endermen_404.zip
+        AudioCraftV1.5.zip
+        TZP 1.12.2_2.6.zip
+        Gray's Monster Overhaul v1.0 1.19-1.21.zip
+        Boss Bars+ 1.12.zip
+        LowOnFire_1.12.zip
+        AnimEmis_srparasites.zip
+        SRP Emissives.zip
+        Emis_Rlcraft.zip
+        EclecticTrove-1.12.2-1.0.1.zip
+        Luminous1.12.2.zip
+        RotN_Wither_v.3.0.zip
+        Cine-Ghast.zip
+        BetterGhastRemastered[9].zip
+        TREPIDATION Resource Pack
+     >
 }
 
 
@@ -247,14 +312,19 @@ mob_health_bar {
     # Should the health bar be shown on bosses?
     B:"[32] Show Health Bar on Bosses"=true
 
-    # Should the health bar only be shown for the entity looked at?
+    # Should the health bar only be shown for the entity you are looking at?
     B:"[33] Show Health Bar on Focused"=false
 
+    # How long should the health bar be shown for after you stop looking at an entity? In milliseconds, 0 to disable.
+    # Min: 0
+    # Max: 2147483647
+    I:"[34] Linger Health Bar on Focused"=1000
+
     # Should additional debug information be shown with F3 active?
-    B:"[34] Show Debug Info"=true
+    B:"[35] Show Debug Info"=true
 
     # Blacklist uses entity IDs. FORMAT: modid:entityid
-    S:"[35] Mob Blacklist" <
+    S:"[36] Mob Blacklist" <
         ArmorStand
      >
 }
