--- a/config/endermodpacktweaks/modpack.cfg
+++ b/config/endermodpacktweaks/modpack.cfg
@@ -19,6 +19,54 @@ crash_info {
 
 
 ##########################################################################################################
+# customization
+#--------------------------------------------------------------------------------------------------------#
+# Customize the game window.
+##########################################################################################################
+
+customization {
+    # Customize the window of the game.
+    B:"[01] Enable Window Customization"=true
+
+    # Set the window title to the modpack name
+    B:"[02] Change window title"=true
+
+    # Customize how the window title is displayed
+    # Format: <lang_key>;<your_title>
+    # [name] - will be replaced by the modpack name
+    # [version] - will be replaced by the modpack version
+    # [author] - will be replaced by the modpack author
+    S:"[03] Window title format" <
+        en_us;[name] ([version]) by [author]
+     >
+
+    # Replace the default icon with a custom one.
+    B:"[04] Replace window icon"=true
+
+    # Override the path to the icon.
+    S:"[05] Window icon path"=config/endermodpacktweaks/icon.png
+}
+
+
+##########################################################################################################
+# default_server
+#--------------------------------------------------------------------------------------------------------#
+# Add a default server to your modpack.
+##########################################################################################################
+
+default_server {
+    # Allows adding a default server.
+    B:"[01] Enable Default Server"=false
+
+    # The IP of the dedicated server to add.
+    S:"[02] Server IP"=127.0.0.1:25555
+
+    # The name of the dedicated server to add.
+    S:"[02] Server Name"=Localhost
+}
+
+
+##########################################################################################################
 # modpack
 #--------------------------------------------------------------------------------------------------------#
 # Made with <3 by Ender-Development
@@ -33,6 +81,9 @@ modpack {
 
     # The author of the modpack.
     S:"[03] Modpack Author"=CalaMariGold
+
+    # A URL for the pack download.
+    S:"[04] Modpack URL"=https://www.curseforge.com/minecraft/modpacks/trepidation
 }
 
 
@@ -89,17 +140,80 @@ options_menu_buttons {
 
 
 ##########################################################################################################
-# server message
+# pack_updater
+#--------------------------------------------------------------------------------------------------------#
+# Check a JSON file from a given URL and compare it with the current modpack version.
+##########################################################################################################
+
+pack_updater {
+    # Enable the Pack Update Check feature. Check an external json url if there is a newer modpack version available.
+    B:"[01] Enable Pack Updater"=true
+
+    # The URL to the JSON file that contains the newest version information.
+    S:"[02] Version JSON Url"=https://raw.githubusercontent.com/CalaMariGold/TREPIDATION/master/pack_version_number.json
+}
+
+
+##########################################################################################################
+# server_message
 #--------------------------------------------------------------------------------------------------------#
 # Similar to something that Nomifactory came up with.
 ##########################################################################################################
 
-"server message" {
+server_message {
     # Enable the Server Message feature. This adds a message to the server console when the server starts.
     B:"[01] Enable Server Message"=true
 
     # The name of the server. Only used if 'Enable Server Message' is enabled.
-    S:"[02] Server Name"=TREPIDATION
+    S:"[02] Server Name"=****Server has started! Players may now join!****
+}
+
+
+##########################################################################################################
+# startup_timer
+#--------------------------------------------------------------------------------------------------------#
+# Display how long it takes for your pack to load.
+##########################################################################################################
+
+startup_timer {
+    # Enable the Startup Timer feature and display the pack load time.
+    B:"[01] Enable Startup Timer"=true
+
+    # How many loading times should be kept in the history?
+    I:"[02] Timer History Size"=5
+
+    # Should the startup time be displayed in the main menu?
+    B:"[03] Display Startup Time"=true
+
+    # The x offset of the time display.
+    I:"[04] Display X-Offset"=0
+
+    # The y offset of the time display.
+    I:"[05] Display Y-Offset"=10
+
+    # The default startup time before the measuring took over. In milliseconds, 0 to disable.
+    I:"[06] Default Startup Time"=0
+
+    # The color of the time display. Format: #RRGGBAA
+    S:"[06] Display Color"=#FFFFFFFF
+
+    # Customize how the start time is displayed
+    # [minutes] - will be replaced with the minutes it took for the pack to start
+    # [seconds] - will be replaced with the seconds it took for the pack to start
+    S:"[07] Time format"=[minutes]m [seconds]s
+
+    # Where the Startup Time String should anchored to.
+    # Valid values:
+    # TOP_LEFT
+    # TOP_CENTER
+    # TOP_RIGHT
+    # MIDDLE_LEFT
+    # MIDDLE_CENTER
+    # MIDDLE_RIGHT
+    # BOTTOM_LEFT
+    # BOTTOM_CENTER
+    # BOTTOM_RIGHT
+    S:"[08] Default Display Location"=TOP_RIGHT
 }
 
 
