--- a/config/endermodpacktweaks/modpack.cfg
+++ b/config/endermodpacktweaks/modpack.cfg
@@ -165,7 +165,7 @@ server_message {
     B:"[01] Enable Server Message"=true
 
     # The name of the server. Only used if 'Enable Server Message' is enabled.
-    S:"[02] Server Name"=****Server has started! Players may now join!****
+    S:"[02] Server Name"=TREPIDATION
 }
 
 
