--- a/config/setbonus/1.12.2.009+.cfg
+++ b/config/setbonus/1.12.2.009+.cfg
@@ -92,7 +92,7 @@ general {
         S:"2f. Bonuses" <
             FullDiamondArmorBonus, [Night Vision(30s) every 60s], 1, FullDiamondArmor
             
-            FullInfernalArmorBonus, [Fire Immunity] [Strength 1] [Increased AOE of Blade of the Last Vigil], 1, FullInfernalArmor
+            FullInfernalArmorBonus, [Knockback Resistance] [Increased AOE of Blade of the Last Vigil], 1, FullInfernalArmor
             
             FullVeilArmorBonus, [Cure all effects every 15s] [Passive Sanity Regen], 1, FullVeilArmor
             
@@ -128,6 +128,8 @@ general {
         #  
         S:"4. Potion Effects" <
             FullDiamondArmorBonus, minecraft:night_vision.1.600.1200
+
+            FullInfernalArmorBonus, potioncore:solid_core.1
             
             FullVeilArmorBonus, potioncore:cure.1.20.300
          >
