enable zenutils mixin

--- a/config/ZenUtils.cfg
+++ b/config/ZenUtils.cfg
@@ -2,7 +2,7 @@
 
 general {
     # Enable mixinzs. Default: false
-    B:enableMixin=false
+    B:enableMixin=true
 
     # Enable RandomTickEvent. It patches hotspot random tick code, which may produce performance loss. Do not enable it if you don't need it. Default: false
     B:enableRandomTickEvent=false
