dreadswine no longer aggro after touching/mining

--- a/config/roughmobsrevamped.cfg
+++ b/config/roughmobsrevamped.cfg
@@ -1017,7 +1017,7 @@ zombie {
 
 "zombie pigman" {
     # Set to false to disable ALL zombie pigman features [default: true]
-    B:"_zombie pigmanFeaturesEnabled"=true
+    B:"_zombie pigmanFeaturesEnabled"=false
 
     # The range at which zombie pigmen will be aggressive to the player. [range: 0 ~ 32767, default: 10]
     I:"zombie pigmanAggressionRange"=2
@@ -1029,7 +1029,7 @@ zombie {
     S:"zombie pigmanAggressiveBlockRange"=3.0
 
     # Set to false to prevent zombie pigman from getting aggressive if the player touches its hitbox [default: false]
-    B:"zombie pigmanAggressiveTouch"=true
+    B:"zombie pigmanAggressiveTouch"=false
 
     # Set to true for zombie pigmen to always be aggressive [default: true]
     B:"zombie pigmanAlwaysAggressive"=false
