disable quark chest buttons/sorting

--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -795,16 +795,16 @@ management {
     B:"Automatic tool restock"=true
     B:"Better craft shifting"=true
     B:"Change hotbar keybind"=true
-    B:"Chest buttons"=true
+    B:"Chest buttons"=false
     B:"Chests in boats"=true
     B:"Ctrl-click an item to favorite it. Favorited items aren't stored by the other features here"=true
-    B:"Inventory sorting"=true
+    B:"Inventory sorting"=false
     B:"Press Ctrl-DELETE in the inventory to delete an item"=true
     B:"Press F in the inventory to switch item to main hand"=true
     B:"Press T in the inventory to link items to chat"=true
     B:"Right click add to shulker box"=true
     B:"Rotate arrow types"=true
-    B:"Store to chests"=true
+    B:"Store to chests"=false
 
     "store to chests" {
         # GUIs in which the drop off button should be forced to show up. Use the "Debug Classnames" option in chest buttons to find the names.
@@ -910,7 +910,7 @@ management {
 
         deposit {
             #  [default: true]
-            B:Enabled=true
+            B:Enabled=false
 
             #  [range: -2147483648 ~ 2147483647, default: -18]
             I:"X Position"=-18
@@ -921,7 +921,7 @@ management {
 
         smart_deposit {
             #  [default: true]
-            B:Enabled=true
+            B:Enabled=false
 
             #  [range: -2147483648 ~ 2147483647, default: -18]
             I:"X Position"=-18
@@ -932,7 +932,7 @@ management {
 
         restock {
             #  [default: true]
-            B:Enabled=true
+            B:Enabled=false
 
             #  [range: -2147483648 ~ 2147483647, default: -18]
             I:"X Position"=-18
@@ -943,7 +943,7 @@ management {
 
         extract {
             #  [default: true]
-            B:Enabled=true
+            B:Enabled=false
 
             #  [range: -2147483648 ~ 2147483647, default: -18]
             I:"X Position"=-18
@@ -977,7 +977,7 @@ management {
     }
 
     "inventory sorting" {
-        B:"Enable Button in Player Inventory"=true
+        B:"Enable Button in Player Inventory"=false
 
         # This feature disables itself if any of the following mods are loaded: 
         #  - inventorytweaks
