reduce wither skelly att damage

--- a/config/roughmobsrevamped.cfg
+++ b/config/roughmobsrevamped.cfg
@@ -40,6 +40,7 @@ attributes {
         stray;generic.maxHealth;1;0.5
         stray;generic.followRange;0;30
 
+        wither_skeleton;generic.attackDamage;0;-2
         wither_skeleton;generic.maxHealth;0;-5
         wither_skeleton;generic.followRange;0;30
 
