dreadswine babies half hp

--- a/config/roughmobsrevamped.cfg
+++ b/config/roughmobsrevamped.cfg
@@ -29,6 +29,7 @@ attributes {
         minecraft:zombie_pigman;generic.knockbackResistance;0;0.5
         minecraft:zombie_pigman;generic.movementSpeed;1;0.1
         minecraft:zombie_pigman;generic.attackDamage;0;-6
+        minecraft:zombie_pigman;generic.maxHealth;1;-0.5;/;2
 
         husk;generic.maxHealth;1;0.5;/;1
         husk;generic.followRange;0;30
@@ -1021,13 +1022,13 @@ zombie {
     B:"_zombie pigmanFeaturesEnabled"=false
 
     # The range at which zombie pigmen will be aggressive to the player. [range: 0 ~ 32767, default: 10]
-    I:"zombie pigmanAggressionRange"=2
+    I:"zombie pigmanAggressionRange"=0
 
     # Chance (1 in X) that a zombie pigman gets aggressive if the player breaks nearby blocks [range: 0 ~ 32767, default: 10]
-    I:"zombie pigmanAggressiveBlockChance"=1
+    I:"zombie pigmanAggressiveBlockChance"=0
 
     # Block radius in which zombie pigman get aggressive if the player breaks blocks [range: 1.0 ~ 32767.0, default: 20.0]
-    S:"zombie pigmanAggressiveBlockRange"=3.0
+    S:"zombie pigmanAggressiveBlockRange"=1.0
 
     # Set to false to prevent zombie pigman from getting aggressive if the player touches its hitbox [default: false]
     B:"zombie pigmanAggressiveTouch"=false
@@ -1037,7 +1038,6 @@ zombie {
 
     # Entities which count as zombie pigman entities [default: [minecraft:zombie_pigman]]
     S:"zombie pigmanEntities" <
-        minecraft:zombie_pigman
      >
 }
 
