baby flayed/encased half hp

--- a/config/roughmobsrevamped.cfg
+++ b/config/roughmobsrevamped.cfg
@@ -75,10 +75,12 @@ attributes {
         nethercraft:dark_zombie;generic.maxHealth;0;-35
         nethercraft:dark_zombie;generic.movementSpeed;1;0.1
         nethercraft:dark_zombie;generic.attackDamage;0;-1;/;0
+        nethercraft:dark_zombie;generic.maxHealth;1;-0.5;/;2
 
         nethercraft:bloody_zombie;generic.maxHealth;0;-25
         nethercraft:bloody_zombie;generic.attackDamage;0;-2;/;0
         nethercraft:bloody_zombie;generic.movementSpeed;1;0.3
+        nethercraft:bloody_zombie;generic.maxHealth;1;-0.5;/;2
 
         nethercraft:camouflage_spider;generic.maxHealth;0;-25
 
