add esm blacklisted mobs

--- a/config/esm/epicsiegemod.cfg
+++ b/config/esm/epicsiegemod.cfg
@@ -42,6 +42,8 @@ general {
         srparasites:sim_villager
         srparasites:sim_adventurer
         srparasites:sim_horse
+        srparasites:sim_bear
+        srparasites:sim_enderman
         srparasites:sim_sheephead
         srparasites:sim_wolfhead
         srparasites:sim_cowhead
@@ -51,18 +53,19 @@ general {
         srparasites:sim_humanhead
         srparasites:incompleteform_small
         srparasites:incompleteform_medium
+        srparasites:host
         srparasites:carrier_heavy
         srparasites:buglin
         srparasites:carrier_flying
         srparasites:rupter
+        srparasites:movingflesh
+        srparasites:worker
         srparasites:beckon_si
         srparasites:beckon_sii
         srparasites:beckon_siii
         srparasites:beckon_siv
         srparasites:kyphosis
         srparasites:sentry
-        srparasites:movingflesh
-        srparasites:worker
         srparasites:pri_longarms
         srparasites:pri_manducater
         srparasites:pri_reeker
@@ -81,6 +84,8 @@ general {
         srparasites:vigilante
         srparasites:warden
         srparasites:bomber_light
+        srparasites:marauder
+        srparasites:grunt
         srparasites:anc_dreadnaut
         srparasites:anc_overlord
         srparasites:anc_pod
@@ -92,6 +97,20 @@ general {
         srparasites:ancientball
         srparasites:homming
         srparasites:antiinfestedblock
+        srparasites:biomassball
+        srparasites:bomb
+        srparasites:biomass
+        srparasites:gore
+        srparasites:tendril
+        srrevenants:for_cow
+        srrevenants:for_bear
+        srrevenants:for_horse
+        srrevenants:for_human
+        srrevenants:for_pig
+        srrevenants:for_sheep
+        srrevenants:proj_debuff
+        srrevenants:proj_damage
+        srrevenants:barrage
         minecraft:wither
      >
 
