disable unused cfg

--- a/config/rltweaker.cfg
+++ b/config/rltweaker.cfg
@@ -235,7 +235,7 @@ general {
         B:patchItemLinking=true
 
         # Fixes modifier books from BountifulBaubles changing the original item when put into an anvil
-        B:patchModifierBooks=true
+        B:patchModifierBooks=false
 
         # Allows for client side overlay text configuration
         B:patchOverlayMessage=false
@@ -516,10 +516,10 @@ general {
 
         baubles {
             # Master switch for this mod compatibility
-            B:ENABLED=true
+            B:ENABLED=false
 
             # Fixes Miner's Ring Dupe
-            B:"Miner's Ring Dupe Fix"=true
+            B:"Miner's Ring Dupe Fix"=false
         }
 
         ##########################################################################################################
