fix sanity resetting on death & not draining in abyss

--- a/config/sanity.cfg
+++ b/config/sanity.cfg
@@ -9,27 +9,30 @@ general {
     ##########################################################################################################
 
     mechanics {
-        # The sanity to increase when player gain an advancement.
+        # The sanity to increase when players gain an advancement.
         # Min: 0.0
         # Max: 100.0
         D:Advancement=0.0
 
-        # The sanity to decrease when player attack an animal.
+        # The sanity to decrease when players attack an animal.
         # Min: 0.0
         # Max: 100.0
         D:"Attack Animal"=0.0
 
-        # The sanity to decrease when player attack another player.
+        # The sanity to decrease when players attack another player.
         # Min: 0.0
         # Max: 100.0
         D:"Attack Player"=0.0
 
-        # The sanity to decrease when player attack a villager.
+        # The sanity to decrease when players attack a villager.
         # Min: 0.0
         # Max: 100.0
         D:"Attack Villager"=0.0
 
-        # The sanity to increase when player bred animals.
+        # Make the list of dimensions blacklist.
+        B:Blacklist=true
+
+        # The sanity to increase when players bred animals.
         # Min: 0.0
         # Max: 100.0
         D:Bred=0.0
@@ -39,14 +42,31 @@ general {
         # Max: 100.0
         D:Choking=0.0
 
-        # The sanity to decrease when player is in dark. (per 0.5s)
+        # The sanity to decrease when players are in dark. (per 0.5s)
         # Min: 0.0
         # Max: 100.0
         D:Dark=0.0
 
-        # The list of blocks or liquids which will decrease or increase sanity when player is in it. ('block;value', per 0.5s)
+        # The list of dimensions which will enable sanity.
+        I:Dimensions <
+         >
+
+        # The sanity to increase when players eat food that isn't in the list.
+        # Min: 0.0
+        # Max: 100.0
+        D:Eat=0.0
+
+        # The list of entities which will decrease sanity when players attack it. ('entity;value')
+        S:Entities <
+            minecraft:enderman;1.0
+         >
+
+        # The list of blocks or liquids which will decrease or increase sanity when players are in it. ('block;value', per 0.5s)
         S:Environment <
-            
+         >
+
+        # The list of equipment which will decrease or increase sanity when players wear it. ('equipment;value', per 0.5s)
+        S:Equipment <
          >
 
         # The sanity to decrease based on the fall distance with the ratio of 1 to this number.
@@ -56,10 +76,9 @@ general {
 
         # The list of food and the sanity to decrease or increase when eat it. ('food;value')
         S:Food <
-            
          >
 
-        # The sanity to increase when player wear a garland. (per 0.5s)
+        # The sanity to increase when players wear a garland. (per 0.5s)
         # Min: 0.0
         # Max: 100.0
         D:Garland=0.0
@@ -74,17 +93,17 @@ general {
         # Max: 100.0
         D:Hurt=0.0
 
-        # The sanity to increase when player kill a mob.
+        # The sanity to increase when players kill a mob.
         # Min: 0.0
         # Max: 100.0
         D:"Kill Mob"=0.0
 
-        # The sanity to decrease when player is struck by lightning.
+        # The sanity to decrease when players are struck by lightning.
         # Min: 0.0
         # Max: 100.0
         D:Lightning=0.0
 
-        # The sanity to decrease when player loses pets.
+        # The sanity to decrease when players lose pets.
         # Min: 0.0
         # Max: 100.0
         D:Lost=0.0
@@ -94,17 +113,17 @@ general {
         # Max: 100.0
         D:Mob=0.0
 
-        # The sanity to increase when player stay with pets. (per 0.5s, within 5 blocks)
+        # The sanity to increase when players stay with pets. (per 0.5s, within 5 blocks)
         # Min: 0.0
         # Max: 100.0
         D:Pet=0.0
 
-        # The sanity to increase when player complete a quest. (only support FTB Quests)
+        # The sanity to increase when players complete a quest. (only support FTB Quests)
         # Min: 0.0
         # Max: 100.0
         D:Quest=0.0
 
-        # The sanity to decrease when player get wet by rain. (per 0.5s)
+        # The sanity to decrease when players get wet by rain. (per 0.5s)
         # Min: 0.0
         # Max: 100.0
         D:Rain=0.0
@@ -112,7 +131,7 @@ general {
         # Whether to reset sanity after respawning.
         B:"Reset Sanity"=false
 
-        # The sanity to increase when player wake up.
+        # The sanity to increase when players wake up.
         # Min: 0.0
         # Max: 100.0
         D:Sleep=0.0
@@ -136,7 +155,7 @@ general {
         # Max: 100.0
         D:Thirst=0.0
 
-        # The sanity to decrease when player change dimension.
+        # The sanity to decrease when players change dimension.
         # Min: 0.0
         # Max: 100.0
         D:Trip=0.0
@@ -161,7 +180,7 @@ general {
         I:"Brain OffX"=-25
 
         # Offset on y of the Brain. A positive number means a shift to the top.
-        I:"Brain OffY"=0
+        I:"Brain OffY"=-3
 
         # Whether to enable the brain overlay.
         B:"Brain Overlay"=true
@@ -174,20 +193,14 @@ general {
     ##########################################################################################################
 
     shader {
-        # Enable bits shader when sanity ≤ this number. (set this to -1 to disable)
-        # Min: -1
-        # Max: 100
-        I:Bits=10
+        # Set level1 shader and enable when sanity is lower than the value. ('shader;value')
+        S:Level1=deconverge.json;60
 
-        # Enable deconverge shader when sanity ≤ this number. (set this to -1 to disable)
-        # Min: -1
-        # Max: 100
-        I:Deconverge=10
+        # Set level2 shader and enable when sanity is lower than the value. ('shader;value')
+        S:Level2=notch.json;40
 
-        # Enable notch shader when sanity ≤ this number. (set this to -1 to disable)
-        # Min: -1
-        # Max: 100
-        I:Notch=40
+        # Set level3 shader and enable when sanity is lower than the value. ('shader;value')
+        S:Level3=bits.json;10
     }
 
 }
