--- a/config/fugue.cfg
+++ b/config/fugue.cfg
@@ -239,6 +239,7 @@ general {
         B:"Enable Essential Patch"=true
         B:"Enable Extra Utilities Patch"=true
         B:"Enable Farseek Patch"=true
+        B:"Enable Forge Endertech"=true
         B:"Enable Funky Locomotion"=true
         B:"Enable Funky Locomotion Patch"=true
 
@@ -273,6 +274,7 @@ general {
         B:"Enable Recurrent Complex Patch"=true
         B:"Enable Refined Relocation 2 Patach"=true
         B:"Enable ReplayMod Patch"=true
+        B:"Enable SAO UI Patch"=true
         B:"Enable ScreenshotViewer Patch"=true
         B:"Enable Shoulder Surfing Reloaded Patch"=true
         B:"Enable SimplyHotSpring Patch"=true
