--- a/config/rlmixins.cfg
+++ b/config/rlmixins.cfg
@@ -73,7 +73,7 @@ general {
 
     "epicsiegemod config" {
         # Disables the digging AI for mobs that are not carrying a pickaxe and disables other griefing AI for performance
-        B:"Digging AI Patch (EpicSiegeMod)"=true
+        B:"Digging AI Patch (EpicSiegeMod)"=false
     }
 
     "infrlcraft config" {
