run resets no longer resets guide book entries
also fixes journal not being clickable after run reset

--- a/config/reroll.cfg
+++ b/config/reroll.cfg
@@ -25,7 +25,6 @@ reroll {
         sanity set @p 100
         deathscrollclear @p
         gamemode survival @p
-        advancement revoke @p everything
         es_advancement @p retries set 0
         es_advancement @p level set 0
         es_cooldown @p reset
@@ -50,6 +49,40 @@ reroll {
         srpevolution phase_0
         timer @p add 100
         effect @p clear
+        advancement revoke @p only triumph:advancements/challenges/die
+        advancement revoke @p only triumph:advancements/challenges/swineslayer
+        advancement revoke @p only triumph:advancements/challenges/hidden/dreadswine1
+        advancement revoke @p only triumph:advancements/challenges/hidden/dreadswine2
+        advancement revoke @p only triumph:advancements/challenges/hidden/dreadswine3
+        advancement revoke @p only triumph:advancements/challenges/hidden/dreadswine4
+        advancement revoke @p only triumph:advancements/challenges/hidden/dreadswine5
+        advancement revoke @p only triumph:advancements/challenges/hidden/dreadswine6
+        advancement revoke @p only triumph:advancements/challenges/hidden/dreadswine7
+        advancement revoke @p only triumph:advancements/challenges/hidden/dreadswine8
+        advancement revoke @p only triumph:advancements/challenges/hidden/dreadswine9
+        advancement revoke @p only triumph:advancements/challenges/hidden/dreadswine10
+        advancement revoke @p only triumph:advancements/challenges/hidden/dreadswine11
+        advancement revoke @p only triumph:advancements/challenges/hidden/dreadswine12
+        advancement revoke @p only triumph:advancements/challenges/hidden/dreadswine13
+        advancement revoke @p only triumph:advancements/challenges/hidden/dreadswine14
+        advancement revoke @p only triumph:advancements/challenges/hidden/dreadswine15
+        advancement revoke @p only triumph:advancements/dimensions/end
+        advancement revoke @p only triumph:advancements/dimensions/erebus
+        advancement revoke @p only triumph:advancements/dimensions/limbo
+        advancement revoke @p only triumph:advancements/dimensions/minds_abyss
+        advancement revoke @p only triumph:advancements/dimensions/nether
+        advancement revoke @p only triumph:advancements/dimensions/overworld
+        advancement revoke @p only triumph:advancements/dimensions/start
+        advancement revoke @p only triumph:advancements/hidden/balloon
+        advancement revoke @p only triumph:advancements/hidden/dreadswine_entry_OBTAINED
+        advancement revoke @p only triumph:advancements/hidden/flame_pendant
+        advancement revoke @p only triumph:advancements/hidden/foulite_dust_entry_OBTAINED
+        advancement revoke @p only triumph:advancements/hidden/glowood_entry_OBTAINED
+        advancement revoke @p only triumph:advancements/hidden/infernium_entry_OBTAINED
+        advancement revoke @p only triumph:advancements/hidden/nether_wraith_entry_OBTAINED
+        advancement revoke @p only triumph:advancements/hidden/unlock_journal
+        advancement revoke @p only triumph:advancements/hidden/veilstrium_entry_OBTAINED
+        advancement revoke @p only triumph:advancements/hidden/wake_of_fire
      >
 
     # Sets the resource location for the block you can spawn on. [default: [minecraft:grass], [minecraft:dirt], [minecraft:stone]]
