--- a/config/fermiumbooter.cfg
+++ b/config/fermiumbooter.cfg
@@ -8,7 +8,7 @@ general {
 
     # Prevents the mixin compatibility warning text from rendering on screen
     # Errors and warnings will still be printed to the log
-    B:"Suppress Mixin Compatibility Warnings Render"=false
+    B:"Suppress Mixin Compatibility Warnings Render"=true
 }
 
 
