--- a/config/fermiummixins.cfg
+++ b/config/fermiummixins.cfg
@@ -295,7 +295,7 @@ general {
 
     "elenaidodge config" {
         # Rewrites the TickEventListener for better performance when ability caps and cooldowns are set to 0
-        B:"Tick Performance Improvement (ElenaiDodge)"=true
+        B:"Tick Performance Improvement (ElenaiDodge)"=false
     }
 
     "fancymenu config" {
