--- a/config/invmove.cfg
+++ b/config/invmove.cfg
@@ -34,6 +34,7 @@ ui_background {
         B:de.keksuccino.fancymenu.menu.fancy.helper.ui.FMConfigScreen=true
         B:dmillerw.menu.gui.GuiRadialMenu=true
         B:io.enderdev.endermodpacktweaks.features.keybinds.GuiNewControls=true
+        B:io.enderdev.endermodpacktweaks.features.packupdater.UpdateGUI=true
         B:me.jonathing.minecraft.packupdater.client.UpdateGUI=true
         B:mirror.normalasm.common.crashes.GuiCrashScreen=true
         B:mirror.normalasm.common.crashes.GuiInitErrorScreen=true
