--- a/config/crash_assistant/config.toml
+++ b/config/crash_assistant/config.toml
@@ -121,7 +121,7 @@
 [greeting]
 	#You don't need to touch this option.
 	#On first world join of modpack creator if set to false shows greeting, then self enables.
-	shown_greeting = false
+	shown_greeting = true
 
 #You can customise GUI with this options.
 [gui_customisation]
