--- a/config/fermiummixins.cfg
+++ b/config/fermiummixins.cfg
@@ -481,6 +481,9 @@ general {
         # Patches Quarks Ender Watcher to greatly improve performance
         B:"Ender Watcher Performance Patch (Quark)"=true
 
+        # Increases performance of Monster Boxes looking for players nearby to activate
+        B:"Monster Box Check Player Performance (Quark)"=true
+
         # Fixes Quark's armor rune enchantment glint not working when Optifine is installed
         B:"Optifine Rune Render Fix (Quark)"=true
 
@@ -642,11 +645,20 @@ general {
         S:"Custom Dimension Filler Block Override List" <
          >
 
+        # Rewrites part of Forge/Vanilla IBlockState registry handling to fix slow identity-hash-based checks
+        # This can improve performance of chunk saving and chunk generation
+        # Warning: Do not add this to an existing world/pack without making a backup and testing, any mod modifying blockstate instancing/blockstate registry (Unlikely) will conflict
+        # I won't take responsibility for you rolling the dice and nuking your world
+        B:"EXPERIMENTAL: BlockState Identity Registry Patch (Vanilla)"=true
+
         # How many blocks to reduce fall distance by per tick when falling in water
         # Requires "Configurable Water Fall Damage Reduction (Vanilla)" enabled
         # Min: 1.0
         # Max: 100.0
         D:"Fall Distance Reduction in Water"=4.0
+
+        # Improves tick performance of falling block checks
+        B:"Falling Block Tick Performance (Vanilla)"=true
 
         # Attempts to fix errors from processing packets received after the player has already left a world or server
         B:"Fix Delayed Packet Errors (Vanilla)"=true
@@ -831,6 +843,10 @@ general {
         # Suppresses potentially dangerous prefix errors
         B:"Suppress Dangerous Prefix Errors (Vanilla)"=true
 
+        # Suppresses checking and logging of OpenGL errors for performance
+        # Warning: Do not report render errors to anyone while this option is enabled, disable this first in order to get a correct error log
+        B:"Suppress OpenGL Error Checking (Vanilla)"=false
+
         # Suppress received passengers for unknown entity log warnings
         B:"Suppress Received Passengers For Unknown Entity Warnings (Vanilla)"=true
 
@@ -882,6 +898,9 @@ general {
         # Sets world flammable checks to use an existing mutable blockpos instead of creating a new one during flammable checks to save on memory allocation
         B:"World Flammable BlockPos Patch (Vanilla)"=true
 
+        # Replaces some getMaterial checks during chunk and biome generation with direct reference checks, slightly improving performance
+        B:"World Gen Material Check Fix (Vanilla)"=true
+
         # XP orbs will only start merging if they have existed for at least this many ticks
         # Requires "Merge XP Orbs (Vanilla)" enabled
         I:"XP Orb Earliest Merge Tick"=100
@@ -911,6 +930,26 @@ general {
         # Allows for removing Biome names from village waystones
         # Requires "Rework Waystone Used Name Check (Waystones)" enabled
         B:"Village Waystones Remove Biome Name"=false
+    }
+
+    "bettermineshafts config" {
+        # Fixes mineshaft biome checks causing excess chunk generation
+        B:"Excess Mineshaft Chunk Generation Fix (BetterMineshafts)"=true
+
+        # Allows for blacklisting biomes to prevent spawning of Mineshafts
+        B:"Mineshaft Biome Blacklist Patch (BetterMineshafts)"=false
+
+        # Biome name blacklist to prevent Mineshafts from spawning
+        # Requires "Mineshaft Biome Blacklist Patch (BetterMineshafts)" enabled
+        S:"Mineshaft Biome Name Blacklist" <
+            
+         >
+
+        # Biome type blacklist to prevent Mineshafts from spawning
+        # Requires "Mineshaft Biome Blacklist Patch (BetterMineshafts)" enabled
+        S:"Mineshaft Biome Type Blacklist" <
+            
+         >
     }
 
 }
