--- a/config/fugue.cfg
+++ b/config/fugue.cfg
@@ -226,6 +226,7 @@ general {
         # Also patches Custom NPCs Unofficial, will log harmless errors
         B:"Enable Custom NPCs Patch"=true
         B:"Enable Custom Skin Loader Patch"=true
+        B:"Enable Dissolution Patch"=true
 
         # Only use with dj2addons 1.2.1.1 or lower
         B:"Enable Divine Journey 2 Addons Patch"=false
@@ -240,6 +241,7 @@ general {
         B:"Enable Extra Utilities Patch"=true
         B:"Enable Farseek Patch"=true
         B:"Enable Forge Endertech"=true
+        B:"Enable Forge Endertech Patch"=true
         B:"Enable Funky Locomotion"=true
         B:"Enable Funky Locomotion Patch"=true
 
@@ -263,6 +265,7 @@ general {
         B:"Enable Lockdown Patch"=true
         B:"Enable Logistics Pipes Patch"=true
         B:"Enable MAGE (Graphical Tweaks) Patch"=true
+        B:"Enable More Player Model Patch"=true
         B:"Enable More Refined Storage Patch"=true
         B:"Enable NBT Peripheral Patch"=true
         B:"Enable Nothirium Patch"=false
