--- a/config/rlmixins.cfg
+++ b/config/rlmixins.cfg
@@ -98,6 +98,26 @@ general {
     }
 
     "lycanitesmobs config" {
+        # Allows forged equipment to be enchanted
+        # Allows all WEAPON enchantments except Sweeping Edge
+        # Allows Efficiency as the only TOOL enchantment
+        # Durability enchantments, such as Unbreaking and Mending, are not allowed
+        B:"Enchant Forged Equipment (LycanitesMobs)"=false
+
+        # If equipment should be prevented from being disassembled if it is enchanted
+        B:"Enchants Prevent Disassembling"=true
+
+        # List of enchants to additionally blacklist from being applicable to equipment
+        # Format: modid:path
+        S:"Equipment Enchantment Blacklist" <
+         >
+
+        # Minimum level all parts of equipment must be in order to enchant
+        I:"Minimum Part Level For Enchants"=0
+
+        # If equipment should give a warning tooltip if it has parts that are not high enough level to be enchanted
+        B:"Minimum Part Level Tooltip"=true
+
         # Stops mobs from attempting to target mobs that are stone statues, or tagged with NoAI
         B:"Mob Targeting Fix (LycanitesMobs/InFRLCraft)"=false
     }
@@ -177,6 +197,19 @@ general {
 
         # Adds and registers the Lesser Fire Resistance potion effect
         B:"Lesser Fire Resistance Potion Effect"=false
+
+        # Allows for defining effects to affect mob movement to simulate stumbling, such as nausea
+        B:"Mob Nausea Movement Effects"=false
+
+        # Effects that should affect movement to simulate stumbling
+        S:"Nausea Movement Effects List" <
+            minecraft:nausea
+            minecraft:blindness
+            rustic:tipsy
+         >
+
+        # Allows for defining effects to affect player movement inputs to simulate stumbling, such as nausea
+        B:"Player Nausea Movement Effects"=false
 
         # Adds and registers Scarlite armor with custom models
         B:"Scarlite Armor"=false
