--- a/config/fermiummixins.cfg
+++ b/config/fermiummixins.cfg
@@ -649,7 +649,7 @@ general {
         # This can improve performance of chunk saving and chunk generation
         # Warning: Do not add this to an existing world/pack without making a backup and testing, any mod modifying blockstate instancing/blockstate registry (Unlikely) will conflict
         # I won't take responsibility for you rolling the dice and nuking your world
-        B:"EXPERIMENTAL: BlockState Identity Registry Patch (Vanilla)"=true
+        B:"EXPERIMENTAL: BlockState Identity Registry Patch (Vanilla)"=false
 
         # How many blocks to reduce fall distance by per tick when falling in water
         # Requires "Configurable Water Fall Damage Reduction (Vanilla)" enabled
